--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Lista de Tareas</h1>
-    
+    <button id="modoOscuro">🌙 Modo Oscuro</button>
+
     <input type="text" id="entradaTarea" placeholder="Escribe una tarea">
     <button id="agregarTarea">Agregar</button>
 
